# pacfront

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: alpm_util.rs  app.rs  config.rs  main.rs
src/app/: ui.rs
src/app/ui/: cmd.rs  paint_util.rs  tabs.rs
src/app/ui/tabs/: color_theme.rs  local_pkg_list.rs  package.rs  remote_pkg_list.rs
