[package]
name = "pacfront"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
alpm = "4.0.2"
alpm-utils = "4.0.1"
anyhow = "1.0.95"
dirs = "6.0.0"
eframe = "0.30.0"
egui_colors = "0.6.0"
egui_dock = "0.15.0"
egui_extras = "0.30.0"
humansize = "2.1.3"
ouroboros = "0.18.5"
ron = "0.8.1"
serde.version = "1"
serde.features = ["derive"]
smol_str = "0.3.2"
